--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 .enemigos {
     width: 300px;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+}
+
+.inicio {
+    background-color: lavenderblush;
+}
